Delivery_Service/K8s/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deliveryservice-ingress
  namespace: deliveryservice
spec:
  rules:
    - host: delivery.com
      http:
        paths:
          - path: /customer
            pathType: Prefix
            backend:
              service:
                name: customerservice-service
                port:
                  number: 9090
          - path: /delivery
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 9091
